--- a/xar-WP6/index.Rmd
+++ b/xar-WP6/index.Rmd
@@ -8,7 +8,7 @@ date: "December, 2021 - INEDIT"
 #output: powerpoint_presentation
 output:
   xaringan::moon_reader:
-    css: ["assets/xaringan-themer.css"]
+    css: ["assets/xaringan-themer.css", "assets/WP6.css"]
     seal: false
     nature:
 #      slideNumberFormat: "%current%"
@@ -47,9 +47,9 @@ URL = c('https://raw.githubusercontent.com/fabbiocrux/Figures/main/')
 #build_pdf("index.Rmd")
 
 # xaringanExtra
-xaringanExtra::use_panelset()
+#xaringanExtra::use_panelset()
+#xaringanExtra::use_xaringan_extra(c("scribble", "share_again"))
 
-#xaringanExtra::use_share_again()
 
 library(fontawesome)
 ```
@@ -65,13 +65,13 @@ class: title-slide, left, bottom
 
 `r fa("user-friends", fill = "steelblue")` `r rmarkdown::metadata$subtitle`
 
-
-```{r, out.width = '600px', fig.align='right'}
+```{r Logo_ul, out.width = '600px', fig.align='right'}
 knitr::include_graphics(paste0(URL, 'Inedit/Logo-UL-EU.png'))
 ```
 
 
-```{r xaringan-logo, echo=FALSE, include=TRUE}
+
+```{r xaringan-logo, echo=FALSE, include=FALSE}
 xaringanExtra::use_logo(
   image_url = "https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/background.svg",
   width = "100%",
@@ -83,310 +83,17 @@ xaringanExtra::use_logo(
 
 
 
-```{r xaringan-scribble, echo=FALSE}
-xaringanExtra::use_xaringan_extra(c("scribble", "share_again"))
-
-```
-
 
 
 ```{r, child='Reunion-ERPI/06-12-2021-WP6.Rmd', include=FALSE, eval=FALSE}
 
 ```
 
----
-
-# How it started?
-
-.pull-left[
-
-
-
-
-🎯 The **Do-It-Yourself (DIY)** for SME's 👉 whole value chain.
-- New processes, machines and products and functionalities with shorter time to market.
-- Collaborative production / Open Innovation networks for new business opportunities
-- Consumer-goods sectors and couple design, .bg-yellow[**creativity**] and knowledge with a .bg-yellow[**customer-driven production**].
-- .bg-yellow[**Co-creation**] 👉 Design and Production
-
-]
- 
-.pull-right[
-
-```{r, out.width = '100%'}
-knitr::include_graphics(paste0(URL, 'Inedit/tender.png'))
-```
-
-
-]
-
-.pull-left[
-*Scope and Expected Impact*
-
-🔄 KM and ideas of design, technologies and engineering relevant data and demands from users.
--  Creative and agile methodologies strategies
-- Collaborative engineering in the Open-Innovation production networks
-- OS product data exchange, representations of products and processes + modelling and simulation
-- Manufacturing Demonstration Facilities (MDFs)
-- TRL 4 and achieve TRL 6 
-]
-
-.pull-right[
-**Expected Impact**:
-
--Open-Innovation networks for manufacturing that support customer-driven production all around Europe;
-- Business models (SMEs) for the engineering of customised solutions
-- Co-design and co-development capabilities towards a reduction of development costs of new products and services
-- Product variety and personalisation for higher customer satisfaction and loyalty.
-]
- 
----
-
-## Ambition
-
-```{r, out.width = '&à0%'}
-knitr::include_graphics(paste0(URL, 'Inedit/WP2/DIT-model-00.png'))
-```
 
 
 ---
 
-background-image: url("`r paste0(URL, 'Inedit/WP7/INEDIT_Brochure-01.jpg')`")
-background-position: 80% 70%
-background-size: 50%
-
-
-# How it's going?
-
-### INEDIT
-INEDIT demonstrates the potential innovation of .bg-yellow[Social Manufacturing Models creating an Open Innovation] European Do It Together ecosystem for sustainable furniture co-creation
-.pull-left-1[
-
-**Furniture sector**
-
-- Interactive tech to unleash .bg-yellow[**creativity**] & .bg-yellow[**co-creation**]
-
-- Open Innovation Platform to democratize the production resources
-
-- Find new business opportunities
-
-- framework for co-creation & distributed production of .bg-yellow[**customer-driven**]
-
-- Lower ecological impact of Manufacturing
-
-- To create an Ecosystem of 'all stakeholders' within EU
-]
-
-
-
----
-background-image: url("https://erpi.univ-lorraine.fr/assets/images/people/Alex-Gabriel.jpg")
-background-position: 40% 20%
-background-size: 110px
-
-## Equipe
-
-.pull-left[
-
-
-```{r, out.width = '20%', fig.align='center', out.extra='style="float:left; padding:10px;"' }
-knitr::include_graphics('https://erpi.univ-lorraine.fr/assets/images/people/LD.jpg')
-```
-
-**Laurent Dupont**
-
-<br>
-<br>
-<br>
-<br>
-
-```{r, out.width = '20%', fig.align='center', out.extra='style="float:left; padding:10px"' }
-knitr::include_graphics('https://erpi.univ-lorraine.fr/assets/images/people/Fedoua-Kasmi.jpg')
-```
-
-**Fedoua Kasmi**
-
-<br>
-<br>
-<br>
-<br>
-
-```{r, out.width = '20%', fig.align='center', out.extra='style="float:left; padding:10px"' }
-knitr::include_graphics('http://erpi.univ-lorraine.fr/assets/images/people/Frederique-Mayer.jpg')
-```
-
-**Fréderique Mayer**
-
-
-<br>
-<br>
-<br>
-<br>
-
-```{r, out.width = '20%', fig.align='center', out.extra='style="float:left; padding:10px"' }
-knitr::include_graphics('http://erpi.univ-lorraine.fr/assets/images/people/Brunelle-Marche.jpg')
-```
-
-**Brunelle Marche**
-]
-
-
-
-.pull-right[
-
-
-```{r, out.width = '20%', fig.align='left', out.extra='style="float:left; padding:10px"'    }
-knitr::include_graphics('http://erpi.univ-lorraine.fr/assets/images/people/Benjamin.jpg')
-```
-
-**Benjamin Enneser-Serville**. 
-
-<br>
-<br>
-<br>
-<br>
-
-```{r, out.width = '20%', fig.align='left', out.extra='style="float:left; padding:10px"'    }
-knitr::include_graphics('http://erpi.univ-lorraine.fr/assets/images/people/Hakim-Boudaoud.jpg')
-```
-
-
-**Hakim Boudaoud**. 
-
-<br>
-<br>
-<br>
-<br>
-
-
-
-```{r, out.width = '20%', fig.align='center', out.extra='style="float:left; padding:10px"' }
-knitr::include_graphics(paste0(URL, 'Inedit/Cristian.png'))
-```
-
-**Cristian Caceres**. 
-
-Ingénieur d'etudes pour mettre en place et animer le demostrateur INEDIT
-<br>
-<br>
-<br>
-<br>
-
-```{r, out.width = '20%', fig.align='center', out.extra='style="float:left; padding:10px"' }
-knitr::include_graphics(paste0(URL, 'Fontaine/Alexandre.png'))
-```
-
-
-**Alexandre ASTACHENKO** Étudiant LP AFTER en alternance au LF2L dans le cadre de la licence.
-
-]
-
----
-name: UL-INEDIT
-class: middle
-background-image: url("`r paste0(URL, 'Inedit/Proposal/Fig-3a-00.png')`")
-background-position: 80% 50%
-background-size: 60%
-
-### UL at INEDIT
-
----
-class: middle
-background-image: url("`r paste0(URL, 'Inedit/Structure/Structure-00.png')`")
-background-position: 80% 50%
-background-size: 30%
-
-
-
-### Overview of the work (UL)
-
-- From DYI to the definition DIT `r fa("check-circle", fill = "steelblue")`
-- Formalisation DIT `r fa("check-circle", fill = "steelblue")`
-
-- Open Manufacturing Demostrator (OMDF) `r fa("spinner", fill = "steelblue")`
-
-- **Demostrator (UL)** `r fa("spinner", fill = "steelblue")`
-
-.small.pull-left-1[
-
-Jiang, P., Leng, J., Ding, K., Gu, P., Koren, Y., 2016. Social manufacturing as a sustainable paradigm for mass individualization. Proc. Inst. Mech. Eng. Part B J. Eng. Manuf. 230, 1961–1968. https://doi.org/10.1177/0954405416666903
-]
-
----
-
-## Definition DIT
-
-```{r, out.width = '70%'}
-knitr::include_graphics(paste0(URL, 'Inedit/WP2/DIT-model.png'))
-```
-
-<br>
-
-Innovations, Journal of Innovation Economics and management  – Special Issue (2022) “Do-It-Together” and innovation, towards the Factories of the Future (FoF) 
-Guest Editor(s): Laurent Dupont, Fedoua Kasmi, Joshua M. Pearce, Roland J. Ortt
-http://i-jiem.cairn.info/wp-content/uploads/sites/5/2017/05/JIEM-call-for-paper-Do-It-Together.pdf]
-
----
-## Definition DIT
-
-```{r, out.width = '100%'}
-knitr::include_graphics(paste0(URL, 'Inedit/WP2/DIT-model-01.png'))
-```
-
-
----
-## Formalisation DIT
-
-```{r, out.width = '70%'}
-knitr::include_graphics(paste0(URL, 'Inedit/WP2/Formalisation.png'))
-```
-
-
-http://inedit-db.lf2l.fr/fr/database/dit/
-
-
----
-
-template:  UL-INEDIT
-
----
-background-image: url("`r paste0(URL, 'Inedit/WP4/OMFD-01.png')`")
-background-position: 90% 70%
-background-size: 90%
-
-### Open Manufacturing Demonstrator (OMDF) 
-
-
-To facilitate the understanding, the demonstrator of the DIT approach will be called Open Manufacturing Demonstrator (OMD)
-
-
----
-
-background-image: url("`r paste0(URL, 'Inedit/WP4/OMFD-03.png')`")
-background-position: 80% 70%
-background-size: 90%
-
-### Open Manufacturing Demonstrator (OMDF) 
-
-To facilitate the understanding, the demonstrator of the DIT approach will be called Open Manufacturing Demonstrator (OMD)
-
-
----
-
-
-template:  UL-INEDIT
-
-
----
-# Demostrators INEDIT
-
-```{r, out.width = '100%', fig.align='center'}
-knitr::include_graphics(paste0(URL, 'Inedit/WP6/Demostrator-00.png'))
-```
-
----
-
-# Demostrator UL
+# DEMONSTRATOR UL
 
 .pull-left-2[
 - Implement the consumer-driven DIT process within the four use cases
@@ -415,10 +122,9 @@ knitr::include_graphics(paste0(URL, 'Gigabot/Gigabot-05.jpg'))
 
 ---
 
-exclude: true
+exclude: false
 
 # Planning Task 6.4:
-
 
 ```{r, fig.align='center'}
 
@@ -431,25 +137,19 @@ magick::image_read_pdf("figures/Gantt/WP6/_Planning.pdf",
 
 # Our demostrator
 
-```{r, out.width = '100%', fig.align='center'}
-
+.pull-left-2[
+```{r, out.width = '100%', fig.align='left'}
 knitr::include_graphics(paste0(URL, 'Inedit/WP6/octroi/2021-11-17-octroi.jpg'))
-
 ```
-
----
-
-# Our demostrator
-
-```{r, out.width = '70%', fig.align='center'}
-
+]
+.pull-right-1[
+```{r, out.width = '100%', fig.align='right'}
 knitr::include_graphics(paste0(URL, 'Inedit/WP6/octroi/2021-11-17-octroi-1.jpg'))
-
 ```
-
+]
 
 ---
-exclude: true
+exclude: false
 
 class: middle
 
@@ -469,13 +169,13 @@ class: middle
 
 ---
 
-exclude: true
-class:  middle center inverse
+exclude: false
+class:  middle center 
 
 # 1) Coordination and alignement with WP 4.3-4.4 
 
 .white.left[
-### Main Goal: To map elements from WP4 
+**Main Goal:** To map elements from WP4 
 ]
 
 ---
@@ -497,6 +197,24 @@ During this task, the partners supporting the future use cases will develop the 
 ]
 
 ---
+## Main functions of INEDIT
+
+Principal Functions (PF):
+- **PF1:** Design a customized product for users with the help of other specialized stakeholders
+- **PF2:** Co-design with other stakeholders and users using the platform
+- **PF3:** Produce a customized product for users with the help of other specialized stakeholders
+- **PF4:** Produce in network with other stakeholders using the platform
+
+Secondary Functions (SF):
+- **SF1:** Provide manufacturing data (means of production, production capacity, location, delays…) to the platform
+- **SF2:** Share environmental practices to the other stakeholders
+- **SF3:** Share manufacturing data for design to the users
+- **SF4:** Insert into the territory
+
+Circular Functions (CF):
+- **CF1:** Adjust to the pillars of the circular economy
+---
+
 ## Coordination and alignement with WP 4.3-4.4 tasks
 
 UL OMDF (communities, Co-design, Gigabot X & more) : T4.3, T4.4  & WP6 
