--- a/xar-WP6/calibration.Rmd
+++ b/xar-WP6/calibration.Rmd
@@ -8,7 +8,7 @@ date: "December, 2021 - INEDIT"
 #output: powerpoint_presentation
 output:
   xaringan::moon_reader:
-    css: ["assets/xaringan-themer.css", "assets/WP6.css"]
+    css: ["assets/xaringan-themer.css" ]
     seal: false
     nature:
 #      slideNumberFormat: "%current%"
