--- a/xar-WP6/calibration.Rmd
+++ b/xar-WP6/calibration.Rmd
@@ -5,10 +5,11 @@ subtitle: |
 author: "Fabio Cruz"
 institute: "ERPI"
 date: "December, 2021 - INEDIT"
-#output: powerpoint_presentation
+# output:
+#   officedown::rpptx_document: default
 output:
   xaringan::moon_reader:
-    css: ["assets/xaringan-themer.css" ]
+    css: ["assets/xaringan-themer.css", "assets/WP6.css"  ]
     seal: false
     nature:
 #      slideNumberFormat: "%current%"
