--- a/docs/xar-WP6/figures/Gantt/WP6/_Planning.Rmd
+++ b/docs/xar-WP6/figures/Gantt/WP6/_Planning.Rmd
@@ -2,7 +2,7 @@
 #title: "Planning"
 #output: html_document
 #classoption: landscape
-geometry:  margin=0.2in, paperheight=5in, paperwidth=11in
+geometry:  margin=0.2in, paperheight=5in, paperwidth=12.5in
 header-includes:
   - \usepackage{pgfgantt}
   - \usepackage{textcomp}
@@ -45,11 +45,11 @@ knitr::opts_chunk$set(echo = TRUE)
 	bar label node/.append style={align=left},
 	milestone/.append style={fill=blue, rounded corners=1pt},
 	milestone label font=\color{blue},
-	time slot unit=month ]{2021-03}{2022-10}
+	time slot unit=month ]{2021-03}{2023-01}
 	\gantttitlecalendar{year, month=shortname} \\
 
-\ganttgroup{\color{grey_Inedit} WP 6: Use cases experiments demonstration and evaluation}{2021-03}{2022-07} \\ 
-   \ganttbar[name=T0]{\color{grey_Inedit} ... Other tasks .... }{2021-03}{2021-03}\\
+\ganttgroup{\color{grey_Inedit} WP 6: Use cases experiments demonstration and evaluation}{2021-03}{2023-01} \\ 
+   %\ganttbar[name=T0]{\color{grey_Inedit} ... Other tasks .... }{2021-03}{2021-03}\\
    
   % \ganttbar[name=T1]{T6.1 Validation Process Specification}{2021-03}{2021-09}\\
    %\ganttbar[name=T2]{T6.2 Manufacturing of wood furniture demonstrator}{2021-10}{2022-07}\\ 
@@ -57,32 +57,32 @@ knitr::opts_chunk$set(echo = TRUE)
    
 \ganttgroup[name=T4, progress=10 ]{\color{blue}T6.4 3D printing of recycled plastic demonstrator}{2021-03}{2022-07}\\ 
 
-   \ganttbar[name=T4_1, progress=80]{Coordination and alignement with WP 4.3-4.4 tasks}{2021-03}{2021-09} \\
+   \ganttbar[name=T4_1, progress=100]{Coordination and alignement with WP 4.3-4.4 tasks}{2021-03}{2021-09} \\
    
-   \ganttbar[name=T4_2, progress=90]{Literature and Background on Additive manufacturing / Recycling / Sustainability}{2021-03}{2021-07}\\ 
+   \ganttbar[name=T4_2, progress=100]{Literature and Background on Additive manufacturing / Recycling / Sustainability}{2021-03}{2021-07}\\ 
       
-   \ganttbar[name=T4_3 , progress=50]{Printability test on Virgin material for calibration purposes}{2021-04}{2021-12}\\ 
+   \ganttbar[name=T4_3 , progress=100]{Printability test on Virgin material for calibration purposes}{2021-04}{2021-12}\\ 
    
-   \ganttbar[name=T4_4, progress=40]{Iterative technical improvement of printing process}{2021-06}{2022-01}\\ 
+   \ganttbar[name=T4_4, progress=40]{Iterative technical improvement of printing process}{2021-06}{2022-07}\\ 
    
-   \ganttbar[name=T4_5, progress=0]{Definition of the scope of plastic wastes according printability }{2021-11}{2022-02}\\ 
+   \ganttbar[name=T4_5, progress=10]{Definition of the scope of plastic wastes according printability }{2021-11}{2022-09}\\ 
    
-   \ganttbar[name=T4_6, progress=0 ]{Experimental research design to test quality on virgin and recycled objects}{2022-01}{2022-05}\\ 
+   \ganttbar[name=T4_6, progress=20 ]{Experimental research design to test quality on virgin and recycled objects}{2022-01}{2022-12}\\ 
    
-   \ganttbar[name=T4_7, progress=70]{Technical development of smart collector to collect plastic waste}{2021-04}{2021-10}\\ 
+   \ganttbar[name=T4_7, progress=70]{Technical development of smart collector to collect plastic waste}{2021-04}{2022-07}\\ 
    
-   \ganttbar[name=T4_8, progress=0]{Validation and consolidation of network of the local actors}{2021-11}{2022-05}\\ 
+   \ganttbar[name=T4_8, progress=15]{Validation and consolidation of network of the local actors}{2021-11}{2022-09}\\ 
    
-   \ganttbar[name=T4_9, progress=0]{Validation Demonstrator for INEDIT stakeholders (according KPI's?)}{2022-05}{2022-07}\\ 
+   \ganttbar[name=T4_9, progress=0]{Validation Demonstrator for INEDIT stakeholders (according KPI's?)}{2022-05}{2023-01}\\ 
          
-  
+  \ganttmilestone[name=Mile1]{Delivrable}{2023-01} 
    
   % \ganttbar[name=T5]{T6.5 Smartification demonstrator}{2021-10}{2022-07}\\ 
    
   % \ganttbar[name=T6]{T6.6 Test and evaluation of results}{2022-04}{2022-07}\\ 
 %   \ganttbar[name=T4]{T6.7 Analysis of the Gender Dimension in the DIT process}{2021-12}{2022-07}\\ 
    
-   \ganttmilestone[name=Mile1]{Delivrable}{2022-07} \ganttnewline
+   
    
    
    
