--- a/xar-WP6/partials/00-Intro.Rmd
+++ b/xar-WP6/partials/00-Intro.Rmd
@@ -1,4 +1,5 @@
 
+
 # DEMONSTRATOR UL
 
 .pull-left-2[
@@ -28,8 +29,6 @@ knitr::include_graphics(paste0(URL, 'Gigabot/Gigabot-05.jpg'))
 
 ---
 
-exclude: false
-
 # Planning Task 6.4:
 
 ```{r Gantt, fig.align='center'}
@@ -39,28 +38,28 @@ exclude: false
 
 #knitr::include_graphics(here('figures', 'Gantt', 'WP6', '2022-02-17-Planning.jpg'))
 
-knitr::include_graphics("figures/Gantt/WP6/2022-02-17-planning.jpg")
+knitr::include_graphics(here("figures", "Gantt", "WP6", "planning.jpg"))
+
+knitr::include_graphics("figures/Gantt/WP6/planning.jpg")
 ```
 
 ---
 name: GF-demostrator
 background-image: url("`r paste0(URL, 'Inedit/WP6/octroi/2021-11-17-octroi.jpg')`")
 background-position: 50% 60%
-background-size: 75%
+background-size: 70%
 
 
 # Our demostrator 
 
 .panelset[
-
 .panel[.panel-name[Today: `r format(Sys.time(), "%b %Y")`]
-
 
 ]
 
-.panel[.panel-name[Nov 2021]
-```{r GF-Nov-2021, out.width='80%'}
-knitr::include_graphics(paste0(URL, 'Inedit/WP6/octroi/2021-11-Octroi.jpg'))
+.panel[.panel-name[Jan 2022]
+```{r GF-Jan-2022, out.width='80%'}
+knitr::include_graphics(paste0(URL, 'Inedit/WP6/octroi/2022-01-Octroi.jpg'))
 ```
 ]
 
@@ -70,9 +69,13 @@ knitr::include_graphics(paste0(URL, 'Inedit/WP6/octroi/2021-12-Octroi.jpg'))
 ```
 ]
 
-.panel[.panel-name[Jan 2022]
-```{r GF-Jan-2022, out.width='80%'}
-knitr::include_graphics(paste0(URL, 'Inedit/WP6/octroi/2022-01-Octroi.jpg'))
+
+.panel[.panel-name[Nov 2021]
+```{r GF-Nov-2021, out.width='80%'}
+knitr::include_graphics(paste0(URL, 'Inedit/WP6/octroi/2021-11-Octroi.jpg'))
 ```
 ]
+
+
+
 ]
