--- a/xar-WP6/partials/07-Smart-collector.Rmd
+++ b/xar-WP6/partials/07-Smart-collector.Rmd
@@ -1,4 +1,5 @@
 
+
 # Agenda for Meeting 
 
 Date: `r format(Sys.time(), '%d %B, %Y')`
@@ -19,7 +20,6 @@ Date: `r format(Sys.time(), '%d %B, %Y')`
 ### Main Goal:
 
 - To have an open source IoT in order to deploy for the demonstrator
-
 
 ---
 
@@ -75,24 +75,54 @@ knitr::include_graphics(paste0(URL, 'Inedit/WP6/smart-collector/SM-02.jpg'))
 .pull-left[
 - To create a local network collection for punctual plastic material. 
 
-
-```{r , include=TRUE, echo=FALSE, fig.cap=" ", out.width = '100%', fig.align='center'}
-
+```{r , fig.cap="Prototypes", out.width = '70%', fig.align='center'}
 knitr::include_graphics(paste0(URL, 'Inedit/WP6/smart-collector/SM-05.jpg'))
-
 ```
 ]
 
-.pull-right[
-```{r , include=TRUE, echo=FALSE, fig.cap=" ", out.width = '70%', fig.align='center'}
-knitr::include_graphics(paste0(URL, 'Inedit/WP6/smart-collector/2021-11-17-SM.jpg'))
 
-knitr::include_graphics(paste0(URL, 'Inedit/WP6/smart-collector/SM-06.jpeg'))
+.pull-right[
+```{r,   out.width = '70%'}
+knitr::include_graphics(paste0(URL, 'Inedit/WP6/smart-collector/2021-11-17-SM.jpg'))
 ```
 ]
 
 Protyping a dashboard: http://grafana.lf2l.fr/dashboard/snapshot/qE20JzmxdSGXNDEaAwPpqgQBvr18ps1d?orgId=1
 
+---
 
+
+## Deployment in the local are
+
+
+:::: {style="display: flex;"}
+
+::: {}
+Here is the **first** Div.
+
+```{r,   out.width = '60%'}
+knitr::include_graphics(paste0(URL, 'Inedit/WP6/smart-collector/SM-06.jpeg'))
+```
+:::
+
+::: {}
+And this block will be put on the right:
+
+```{r,   out.width = '60%'}
+knitr::include_graphics(paste0(URL, 'Inedit/WP6/smart-collector/SM-06.jpeg'))
+```
+:::
+
+::: {}
+And this block will be put on the right:
+
+```{r,   out.width = '60%'}
+knitr::include_graphics(paste0(URL, 'Inedit/WP6/smart-collector/SM-06.jpeg'))
+```
+:::
+
+::::
+
+---
 
 
