--- a/xar-WP6/partials/06-Experimental.Rmd
+++ b/xar-WP6/partials/06-Experimental.Rmd
@@ -27,3 +27,8 @@ class: middle
 ## Experimental research design to test quality on virgin and recycled objects
 
 .Large[**Work in progress**]
+
+.center[
+<iframe src="https://giphy.com/embed/l0K4hO8mVvq8Oygjm" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/topshelfrecords-clique-top-shelf-records-l0K4hO8mVvq8Oygjm"></a></p>
+
+]
