--- a/xar-WP6/partials/09-Kpi.Rmd
+++ b/xar-WP6/partials/09-Kpi.Rmd
@@ -26,3 +26,10 @@ class: middle
 ## Validation Demonstrator for INEDIT stakeholders (according KPI's?)
 
 .Large[**Work in progress**]
+
+
+.center[
+<iframe src="https://giphy.com/embed/l0K4hO8mVvq8Oygjm" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/topshelfrecords-clique-top-shelf-records-l0K4hO8mVvq8Oygjm"></a></p>
+
+]
+
